# StatsForSpotify

./: .gitignore  config_example.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0234561abac9_init.py
app/: __init__.py  auth.py  authorized.html  bot.py  models.py  utils.py
