[tool.poetry]
name = "statsforspotify"
version = "0.1.0"
description = ""
authors = ["Artyom Ivanov <tmat.ivanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.24.0"
databases = "^0.6.0"
ormar = "^0.11.2"
spoffy = "^0.6.1"
fastapi = {extras = ["all"], version = "^0.78.0"}
aiohttp = "^3.8.1"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
